feat: add expandable description panel layout with reliable CSS

--- a/index.HTML
+++ b/index.HTML
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <script src="myscripts.js"></script> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dzikr!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Dzikr!</h1>
+    <div class="dzikir-container">
+        <h1>Subhānallāh</h1>
+        <div>
+            <p class="number"> number</p><br>
+            <p class="number">last query</p>
+        </div>
+        <button class="incrementBtn">Increment Dzikr</button>
+        <button class="childBtn">Save Dzikr</button>
+        <button class="childBtn">Reset Dzikr</button>
+
+        <p id="btnEl"></p>
+        <p id="counterEl"></p>
+    </div>
+    <details>
+        <summary>FAQ</summary> 
+        <div class="content"> 
+            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+        </div> 
+    </details>
+    <div class="dzikir-container">
+        <h1>Alhamdulillāh</h1>
+        <div>
+            <p class="number"> numbersss</p><br>
+            <p class="number">last query</p>
+        </div>
+        <button class="incrementBtn">Increment Dzikr</button>
+        <button class="childBtn">Save Dzikr</button>
+        <button class="childBtn">Reset Dzikr</button>
+        <p id="btnEl"></p>
+        <p id="counterEl"></p>
+    </div>
+    <details>
+        <summary>FAQ</summary> 
+        <div class="content"> 
+            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+        </div> 
+    </details>
+    <div class="dzikir-container">
+        <h1>Lā ilāha illallāh</h1>
+        <div>
+            <p class="number"> number</p><br>
+            <p class="number">last query</p>
+        </div>
+        <button class="incrementBtn">Increment Dzikr</button>
+        <button class="childBtn">Save Dzikr</button>
+        <button class="childBtn">Reset Dzikr</button>
+        <p id="btnEl"></p>
+        <p id="counterEl"></p>
+    </div>
+    <details>
+        <summary>FAQ</summary> 
+        <div class="content"> 
+            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+        </div> 
+    </details>
+    <div class="dzikir-container">
+        <h1>Allāhu Akbar</h1>
+        <p class="number"> number</p>
+        <p class="number">last query</p>
+        <button class="incrementBtn">Increment Dzikr</button>
+        <button class="childBtn">Save Dzikr</button>
+        <button class="childBtn">Reset Dzikr</button>
+        <p id="btnEl"></p>
+        <p id="counterEl"></p>
+    </div>
+    <details>
+        <summary >FAQ</summary> 
+        <div class="content"> 
+            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+        </div> 
+    </details>
+    
+    
 </body>
 </html>
