fix: improve button layout and update
- Fixed malfunctioning button behavior to ensure consistent interaction.
- Updated description text for clarity da'wah.
- Refined button layout for better alignment and visual consistency.
- Planned a more structured and maintainable layout strategy for future development.

--- a/index.HTML
+++ b/index.HTML
@@ -11,12 +11,9 @@
     <div class="dzikir-container">
         <h1>Subhānallāh</h1>
         <div>
-            <p class="number"> number</p><br>
-            <p class="number">last query</p>
+            <p class="number"></p>
         </div>
         <button class="incrementBtn">Increment Dzikr</button>
-        <button class="childBtn">Save Dzikr</button>
-        <button class="childBtn">Reset Dzikr</button>
 
         <p id="btnEl"></p>
         <p id="counterEl"></p>
@@ -24,59 +21,50 @@
     <details>
         <summary>FAQ</summary> 
         <div class="content"> 
-            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+            <p>"Suatu hari Rasulullah ditanya apakah ucapan yang paling unggul? Rasulullah menjawab:‘Yang dipilih Allah SWT terhadap para malaikat-Nya dan hamba-Nya adalah ucapan: Subhanallahi wa bihamdihi."<br> (HR Muslim)</p> 
         </div> 
     </details>
     <div class="dzikir-container">
         <h1>Alhamdulillāh</h1>
         <div>
-            <p class="number"> numbersss</p><br>
-            <p class="number">last query</p>
+            <p class="number"></p>
         </div>
         <button class="incrementBtn">Increment Dzikr</button>
-        <button class="childBtn">Save Dzikr</button>
-        <button class="childBtn">Reset Dzikr</button>
         <p id="btnEl"></p>
         <p id="counterEl"></p>
     </div>
     <details>
         <summary>FAQ</summary> 
         <div class="content"> 
-            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+            <p>Nabi Muhammad ﷺ bersabda:<br> "Perbanyaklah kalian membaca Alhamdutillah, karena sesungguhnya bacaan Alhamdulillah itu mempunyai dua mata dan dua sayap, yang selalu berdoa di dalam surga dan memohon ampunan bagi pembacanya sampai hari kiamat” <br>(HR imam Ad-Dailimi)</p> 
         </div> 
     </details>
     <div class="dzikir-container">
         <h1>Lā ilāha illallāh</h1>
         <div>
-            <p class="number"> number</p><br>
-            <p class="number">last query</p>
+            <p class="number"></p>
         </div>
         <button class="incrementBtn">Increment Dzikr</button>
-        <button class="childBtn">Save Dzikr</button>
-        <button class="childBtn">Reset Dzikr</button>
         <p id="btnEl"></p>
         <p id="counterEl"></p>
     </div>
     <details>
         <summary>FAQ</summary> 
         <div class="content"> 
-            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+            <p>Nabi Muhammad ﷺ bersabda,”Barangsiapa yang akhir perkataannya sebelum meninggal dunia adalah ‘lailaha illallah’, maka dia akan masuk surga”<br> (HR. Abu Daud. Dikatakan shohih oleh Syaikh Al Albani dalam Misykatul Mashobih no. 1621)</p> 
         </div> 
     </details>
     <div class="dzikir-container">
         <h1>Allāhu Akbar</h1>
-        <p class="number"> number</p>
-        <p class="number">last query</p>
+        <p class="number"></p>
         <button class="incrementBtn">Increment Dzikr</button>
-        <button class="childBtn">Save Dzikr</button>
-        <button class="childBtn">Reset Dzikr</button>
         <p id="btnEl"></p>
         <p id="counterEl"></p>
     </div>
     <details>
         <summary >FAQ</summary> 
         <div class="content"> 
-            <p>Pertanyaan umum: Bagaimana cara pengiriman, garansi, dll.</p> 
+            <p>Dari ‘Abdullah bin ‘Amr, Rasulullah ﷺ bersabda <br> “Tidaklah seorang di muka bumi ini mengucapkan: Laa ilaha illallah, wallahu akbar, subhanallah, wal hamdulillah, wa laa hawla wa laa quwwata illa billah, melainkan dosa-dosanya akan dihapus walaupun sebanyak buih di lautan.”<br> (HR. Ahmad 2/158)</p> 
         </div> 
     </details>
     
