feat :add name feature and progress history

--- a/index.HTML
+++ b/index.HTML
@@ -10,11 +10,13 @@
     <div class="dzikir-container">
         <h1>Tasbih</h1>
         <div id="toast" class="toast">🎯 Target Achieved!</div>
-
+        <input type="text" id="dzikirInput" placeholder="Enter dzikr name">
+        <button class="childBtn" id="addDzikirBtn">Add</button>
         <button class="incrementBtn" id="incrementBtnEl">0</button>
         <button class="childBtn" id="resetBtnEl">Reset</button>
         <input type="number"  id="targetInput" placeholder="Input your target">
-
+        <p>Your progress history</p>
+        <div id="dzikirContainer"></div>
         <p id="btnEl"></p>
         <p id="counterEl"></p>
     </div>
