--- a/index.HTML
+++ b/index.HTML
@@ -22,7 +22,7 @@
                                 min="15" max="1200" required>
                         
                         <button type="submit" class="childBtn" id="addDzikirBtn">Add</button>
-                        <button type="button" id="incrementBtnEl">0</button>
+                        <button type="button" class="incrementBtnEl">0</button>
                         
                         </form>
 
