delete : undefined value

--- a/index.HTML
+++ b/index.HTML
@@ -21,7 +21,7 @@
                                 placeholder="Input your target" 
                                 min="15" max="1200" required>
                         
-                        <button type="submit" class="childBtn" id="addDzikirBtn">Add</button>
+                        <button type="button" class="childBtn" id="addDzikirBtn">Add</button>
                         <button type="button" class="incrementBtnEl">0</button>
                         
                         </form>
